# geogit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  pages.yml  release.yml
crates/geogit-cli/: Cargo.toml
crates/geogit-cli/src/: main.rs
crates/geogit-cli/tests/: integration.rs
crates/geogit-core/: Cargo.toml
crates/geogit-core/src/: dataset.rs  diff.rs  lib.rs  merge.rs
crates/geogit-encoding/: Cargo.toml
crates/geogit-encoding/src/: feature.rs  geometry.rs  legend.rs  lib.rs  path.rs  schema.rs  value.rs
crates/geogit-git/: Cargo.toml
crates/geogit-git/src/: lib.rs  repo.rs  tree.rs
crates/geogit-wc/: Cargo.toml
crates/geogit-wc/src/: gpkg.rs  lib.rs  tracking.rs  traits.rs
docs/: index.html
