[package]
name = "geogit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Distributed version control for geospatial data"

[[bin]]
name = "geogit"
path = "src/main.rs"

[dependencies]
geogit-encoding = { workspace = true }
geogit-core = { workspace = true }
geogit-git = { workspace = true }
geogit-wc = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
indicatif = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
shapefile = { workspace = true }
csv = { workspace = true }
las = { workspace = true }
tiff = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
geo = { workspace = true }
sha2 = { workspace = true }
rmp-serde = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
rusqlite = { workspace = true }
serde_json = { workspace = true }
las = { workspace = true }
tiff = { workspace = true }
