[package]
name = "geogit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core dataset model, diff, and merge for GeoGit"

[dependencies]
geogit-encoding = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
