[package]
name = "geogit-encoding"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "MessagePack feature encoding for GeoGit (Kart-compatible)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
geo = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
