[package]
name = "geogit-git"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Git object storage for GeoGit via gitoxide"

[dependencies]
geogit-encoding = { workspace = true }
geogit-core = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
