[package]
name = "geogit-wc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Working copy adapters for GeoGit (GeoPackage, PostGIS)"

[dependencies]
geogit-encoding = { workspace = true }
geogit-core = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
